--- a/app/views/public/homepage.html.erb
+++ b/app/views/public/homepage.html.erb
@@ -1,1 +1,5 @@
-Welcome to Instagram clone
+<h1 class="mt-5">Welcome to instagram clone</h1>
+
+<p class="lead">please sign in</p>
+
+<%= link_to "Sign Up", new_account_registration_path, class: "btn btn-success" %>
