--- a/app/views/public/homepage.html.erb
+++ b/app/views/public/homepage.html.erb
@@ -1,5 +1,6 @@
 <h1 class="mt-5">Welcome to instagram clone</h1>
 
-<p class="lead">please sign in</p>
+<p class="lead">Please sign in or sign up!</p>
 
 <%= link_to "Sign Up", new_account_registration_path, class: "btn btn-success" %>
+<%= link_to "Sign In", new_account_session_path, class: "btn btn-secondary" %>
